支持对话框动画

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,11 +27,18 @@
 
     <style name="SimpleDialog" parent="Theme.MaterialComponents.Dialog">
         <item name="windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="android:windowAnimationStyle">@style/SimpleDialogAnimation</item>
+    </style>
+
+    <style name="SimpleDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/show_dialog</item>
+        <item name="android:windowExitAnimation">@anim/hide_dialog</item>
     </style>
 
     <style name="BottomInputDialog" parent="BaseBottomInputDialog" />
